# moxtrice

./: .gitignore  .moxtricerc  README.md  config.py  link_to_trice.sh  pyproject.toml  requirements.txt  test.ju.py
moxtrice/: __init__.py  _version.py  config.py  core.py  main.py  utils.py
tests/: test_absl.py  test_yaml_load.py
